3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Improve the commands learn_spell and forget_spell: now these commands accept
partial spell names and print sensible error messages if they fail.
--
include/sproto.h: Remove prototype for now static function.
lib/wizhelp/{forget_spell,learn_special_prayer,learn_spell}: Update help files.
server/c_wiz.c: Add parameter op to get_spell_by_name() for printing error
   messages to op. Allow partial matches for spell name. In
   command_learn_spell_or_prayer() and command_forget_spell() report an error
   to the player instead of an error message to the server log file.
Andreas Kirschbaum 2006-01-01

Fix reference-related crashes.
 plugins/cfpython/cfpython.c
Ryo 2006-01-01

Apply modified patch #1391648 (FIX: new movement code and generators) by Lalo
Martins. This fixes bugs #1383398, #1383392, #1375643, #1372035, #1370409; all
bugs are related to objects stacking which should not stack.
--
common/map.c: In ob_blocked() consider tiles with living objects as blocked.
Andreas Kirschbaum 2005-12-31

Don't print "file not found" for global events.
 plugins/cfpython/cfpython.c
Ryo 2005-12-31

Changed the way Python scripts are called. Now script don't share variables anymore.
 Fix a memory leak.
 plugins/cfpython/cfpython.c
Ryo 2005-12-28

Applied patch #1383359 (Fix death message) courtesy Anton Oussik
( https://sourceforge.net/tracker/index.php?func=detail&aid=1383359&group_id=13833&atid=313833 )
 server/attack.c
Ryo 2005-12-27

server/skills.c: In steal() do not give exp for stealing from pets since this
   can be exploited to gain exp over and over.
Andreas Kirschbaum 2005-12-23
